# smtp-proxy

./: .gitignore  .gitlab-ci.yml  AUTHORS  CHANGES  COPYRIGHT  Dockerfile  Makefile.am  PERL_MODULES  README.md  build-docker.sh  configure  configure.ac  cpanfile  dist.sh  smtp-proxy-0.6.1.tar.gz.sum  smtp-proxy-0.6.1.test-output.txt  sonar-project.properties
fakes/: fake-api.p6  fake-smtp-server.pl
lib/: SMTPProxy.pm
lib/SMTPProxy/: API.pm  SMTPServer.pm
lib/SMTPProxy/SMTPServer/: CommandParser.pm  Connection.pm  ReplyFormatter.pm
t/: FakeAPI.pm  end-to-end.t  smtp-server.t
